--- a/src/index_pc.html
+++ b/src/index_pc.html
@@ -681,7 +681,184 @@
 
         </section>
         <section class="section__main section__main--serprise02">
-          <h1 class="hide">Main serprise02.</h1>
+          <header class="section__header">
+            <h1 class="hide">Main serprise02.</h1>
+            <img src="./assets/images/main/pc/module07/module07_header_txt.jpg" alt="best seller" class="best__title">
+          </header>
+
+          <div class="section__inner">
+            <div class="product__box">
+              <ul class="product__list product__list--wrap">
+                <li class="product__item">
+                  <a href="#" class="section__link">
+                    <div class="product__container">
+                      <div class="product__thumb">
+                        <img src="@@webRoot/assets/images/main/pc/module06/module06_product_01.jpg" alt="">
+                      </div>
+                      <div class="product__info">
+                        <p class="info__title--brand">아리따움</p>
+                        <p class="info__title--desc">브라이트닝 커버 워터리 쿠션 50+ PA+++</p>
+                        <div class="info__box--price">
+                          <span class="info__price info__price--discount">13000</span>
+                          <!-- <span class="info__price info__price--origin">50000</span> -->
+                          <!-- <span class="info__title--brand">13000</span> -->
+                        </div>
+                      </div>
+
+                    </div>
+                    <!--product__container-->
+                  </a>
+                </li>
+                <li class="product__item">
+                  <a href="#" class="section__link">
+                    <div class="product__container">
+                      <div class="product__thumb">
+                        <img src="@@webRoot/assets/images/main/pc/module06/module06_product_01.jpg" alt="">
+                      </div>
+                      <div class="product__info">
+                        <p class="info__title--brand">아리따움</p>
+                        <p class="info__title--desc">브라이트닝 커버 워터리 쿠션 50+ PA+++</p>
+                        <div class="info__box--price">
+                          <span class="info__price info__price--discount">13000</span>
+                          <!-- <span class="info__price info__price--origin">50000</span> -->
+                          <!-- <span class="info__title--brand">13000</span> -->
+                        </div>
+                      </div>
+
+                    </div>
+                    <!--product__container-->
+                  </a>
+                </li>
+                <li class="product__item">
+                  <a href="#" class="section__link">
+                    <div class="product__container">
+                      <div class="product__thumb">
+                        <img src="@@webRoot/assets/images/main/pc/module06/module06_product_01.jpg" alt="">
+                      </div>
+                      <div class="product__info">
+                        <p class="info__title--brand">아리따움</p>
+                        <p class="info__title--desc">브라이트닝 커버 워터리 쿠션 50+ PA+++</p>
+                        <div class="info__box--price">
+                          <span class="info__price info__price--discount">13000</span>
+                          <!-- <span class="info__price info__price--origin">50000</span> -->
+                          <!-- <span class="info__title--brand">13000</span> -->
+                        </div>
+                      </div>
+
+                    </div>
+                    <!--product__container-->
+                  </a>
+                </li>
+                <li class="product__item">
+                  <a href="#" class="section__link">
+                    <div class="product__container">
+                      <div class="product__thumb">
+                        <img src="@@webRoot/assets/images/main/pc/module06/module06_product_01.jpg" alt="">
+                      </div>
+                      <div class="product__info">
+                        <p class="info__title--brand">아리따움</p>
+                        <p class="info__title--desc">브라이트닝 커버 워터리 쿠션 50+ PA+++</p>
+                        <div class="info__box--price">
+                          <span class="info__price info__price--discount">13000</span>
+                          <!-- <span class="info__price info__price--origin">50000</span> -->
+                          <!-- <span class="info__title--brand">13000</span> -->
+                        </div>
+                      </div>
+
+                    </div>
+                    <!--product__container-->
+                  </a>
+                </li>
+                <li class="product__item">
+                  <a href="#" class="section__link">
+                    <div class="product__container">
+                      <div class="product__thumb">
+                        <img src="@@webRoot/assets/images/main/pc/module06/module06_product_01.jpg" alt="">
+                      </div>
+                      <div class="product__info">
+                        <p class="info__title--brand">아리따움</p>
+                        <p class="info__title--desc">브라이트닝 커버 워터리 쿠션 50+ PA+++</p>
+                        <div class="info__box--price">
+                          <span class="info__price info__price--discount">13000</span>
+                          <!-- <span class="info__price info__price--origin">50000</span> -->
+                          <!-- <span class="info__title--brand">13000</span> -->
+                        </div>
+                      </div>
+
+                    </div>
+                    <!--product__container-->
+                  </a>
+                </li>
+                <li class="product__item">
+                  <a href="#" class="section__link">
+                    <div class="product__container">
+                      <div class="product__thumb">
+                        <img src="@@webRoot/assets/images/main/pc/module06/module06_product_01.jpg" alt="">
+                      </div>
+                      <div class="product__info">
+                        <p class="info__title--brand">아리따움</p>
+                        <p class="info__title--desc">브라이트닝 커버 워터리 쿠션 50+ PA+++</p>
+                        <div class="info__box--price">
+                          <span class="info__price info__price--discount">13000</span>
+                          <!-- <span class="info__price info__price--origin">50000</span> -->
+                          <!-- <span class="info__title--brand">13000</span> -->
+                        </div>
+                      </div>
+
+                    </div>
+                    <!--product__container-->
+                  </a>
+                </li>
+                <li class="product__item">
+                  <a href="#" class="section__link">
+                    <div class="product__container">
+                      <div class="product__thumb">
+                        <img src="@@webRoot/assets/images/main/pc/module06/module06_product_01.jpg" alt="">
+                      </div>
+                      <div class="product__info">
+                        <p class="info__title--brand">아리따움</p>
+                        <p class="info__title--desc">브라이트닝 커버 워터리 쿠션 50+ PA+++</p>
+                        <div class="info__box--price">
+                          <span class="info__price info__price--discount">13000</span>
+                          <!-- <span class="info__price info__price--origin">50000</span> -->
+                          <!-- <span class="info__title--brand">13000</span> -->
+                        </div>
+                      </div>
+
+                    </div>
+                    <!--product__container-->
+                  </a>
+                </li>
+                <li class="product__item">
+                  <a href="#" class="section__link">
+                    <div class="product__container">
+                      <div class="product__thumb">
+                        <img src="@@webRoot/assets/images/main/pc/module06/module06_product_01.jpg" alt="">
+                      </div>
+                      <div class="product__info">
+                        <p class="info__title--brand">아리따움</p>
+                        <p class="info__title--desc">브라이트닝 커버 워터리 쿠션 50+ PA+++</p>
+                        <div class="info__box--price">
+                          <span class="info__price info__price--discount">13000</span>
+                          <!-- <span class="info__price info__price--origin">50000</span> -->
+                          <!-- <span class="info__title--brand">13000</span> -->
+                        </div>
+                      </div>
+
+                    </div>
+                    <!--product__container-->
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <button class="more__btn">
+            <i class="sprite-icon sprite-icon-btn_more"></i>
+            <h3 class="hide">
+              더보기
+            </h3>
+          </button>
+
         </section>
         <section class="section__main section__main--visual02">
           <h1 class="hide">Main visual02.</h1>
