--- a/src/index_pc.html
+++ b/src/index_pc.html
@@ -1020,6 +1020,30 @@
           <header class="section__header">
             <h1 class="hide">Main visual02.</h1>
           </header>
+
+          <!-- <div class="section__inner"> -->
+          <div class="box__layout box__layout--between">
+            <div class="layout__container">
+              <div class="layout__info">
+                <div class="layout__title">
+                  IOPE
+                </div>
+                <div class="layout__desc">
+                  아이오페(Iope)는 식물 과학 기반의 깊이 있는 피부 연구를 통해
+                  매일매일 당신의 피부에 확실하고 정확한 솔루션을 제공해줍니다.
+                  사람에서 시작되는 연구, 식물을 기반으로 하는 과학 '사람, 식물,
+                  그리고 과학'은 아이오페의 철학입니다.
+                </div>
+
+                <a href="#" class="more__btn more__btn--link" alt="브랜드관 바로가기"></a>
+              </div>
+            </div>
+            <div class="layout__container layout__container--img img01">
+
+            </div>
+          </div>
+          <!-- </div> -->
+
         </section>
         <section class="section__main section__main--best_review">
 
