--- a/src/index_pc.html
+++ b/src/index_pc.html
@@ -698,7 +698,7 @@
                 <div class="box__recommend--tab">
                   <p class="recommend__title recommend__title--bold">김아라님,</p>
                   <p class="recommend__title">
-                    이런상품을 찾고 계신가요?
+                    이런상품을 찾고 계신가요?
                   </p>
                   <p class="recommend__desc">
                     아리따움에서 자주 찾으시는 상품을 안내해드립니다.
@@ -1261,9 +1261,15 @@
             <h1 class="hide">Main best beauty tip.</h1>
             <img src="./assets/images/main/pc/module09/module09_header_txt.jpg" alt="best seller" class="best__title">
           </header>
-          <a href="#none" onclick="alert('죄송해유 ㅠ..ㅠ')">
-            <img src="@@webRoot/assets/images/main/pc/module09/module09_bg_01.jpg" alt="">
-          </a>
+          <div class="box__video">
+            <div class="video__container">
+              <img src="./assets/images/main/pc/module09/module09_video_01.jpg" alt="best seller" class="best__title">
+              <a href="#">
+                <i class="sprite-icon sprite-icon-btn_play"></i>
+              </a>
+            </div>
+          </div>
+
 
           <div class="section__header--sub">
             <p class="sub01">촉촉하고 청초한 블루 오키드 메이크업</p>
